# invest-research

./: .env.example  .gitignore  CLAUDE.md  README.md  healthcheck.sh  pyproject.toml
config/prompts/: bear_researcher.md  bull_researcher.md  chat_competitor.md  chat_debate.md  chat_financial.md  chat_general.md  chat_quant.md  chat_sentiment.md  data_needs.md  financial_analyst.md  framework_builder.md  framework_builder_auto.md  framework_builder_pro.md  news_analyst.md  reflector.md  risk_advisor.md  screening_criteria.md  technical_analyst.md  xueqiu_analyst.md
src/invest_research/: __main__.py  config.py  main.py  models.py
src/invest_research/crawlers/: akshare_crawler.py  base.py  cls_crawler.py  content_extractor.py  ddg_crawler.py  newsapi_crawler.py  rss_crawler.py  tavily_crawler.py
src/invest_research/data/: analysis_repo.py  chat_repo.py  database.py  framework_repo.py  news_repo.py  reflection_repo.py  report_repo.py
src/invest_research/presentation/: cli.py  markdown_renderer.py  web.py
src/invest_research/scheduler/: jobs.py
src/invest_research/services/: akshare_utils.py  analysis_service.py  chat_service.py  claude_client.py  context_assembler.py  context_compressor.py  crawl_service.py  data_fetcher.py  debate_service.py  dividend_service.py  financial_analysis_service.py  financial_service.py  framework_service.py  intent_router.py  market_scanner_service.py  market_utils.py  qq_notify.py  (+9 more)
tests/: test_core.py  test_interactive_api.sh  test_interactive_ui.py  test_scheduler.py  test_stock_services.py  test_xq_token_manager.py
(+2 files in other folders)
