[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invest-research"
version = "0.1.0"
description = "AI 驱动的投资研究分析系统"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "akshare>=1.14.0",
    "crawl4ai>=0.4.0",
    "newsapi-python>=0.2.7",
    "feedparser>=6.0",
    "duckduckgo-search>=7.0",
    "tavily-python>=0.5.0",
    "trafilatura>=2.0",
    "apscheduler>=3.10,<4.0",
    "rich>=13.0",
    "click>=8.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
invest-research = "invest_research.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
